2011-11-16:
	* add usb-serial, usb-serial-option to support 3g adaptors

2011-11-04:
	* btn_hotplug works
	* add -f, -i ifname to /sbin/wifi

2011-10-19:
	* enable macfilter/maclist of wireless config
	* port block-mount on trunk to support extroot

2011-10-18:
	* enable isolate option for wireless configuration

2011-10-17:
	* add ebtables

2011-10-15:
	* enable CONFIG_EFI_PARTITION to support GPT

2011-08-11:
	* add busybox applet: losetup, getopt

2011-08-10:
	* upgrade to 10.03.1-RC5
	* remove ntfs-3g, vi of busybox
	* add vim (multibyte enabled)
	* refactory the config dir

2011-06-28:
	* enable wait instruction

2011-06-14:
	* set suid/guid of busybox
	* add /etc/busybox.conf

2011-06-13:
	* enable CONFIG_BUSYBOX_CONFIG_FEATURE_ASSUME_UNICODE
	* add busybox applets: su add/deluser add/delgroup realpath
	* update Makefile to support oldcfe target (CFE 1.0.37-10.3)

2011-05-28:
	* enable CONFIG_BUSYBOX_CONFIG_FEATURE_MOUNT_HELPERS
	* enable CONFIG_BUSYBOX_CONFIG_FEATURE_MOUNT_LABEL
	* fix fat dependency to nls_base

2011-05-21:
	* fix vfat mount (add nls_base, nls_cp437)
	* fix max_scsi_luns to max_luns
	* add losetup in backfire config

2011-05-20:
	* add nls_utf8 in /etc/modules.d/90-usb-storage
	* remove nsl_ascii.ko

2011-05-17:
	* enable multiple luns by max_scsi_luns
	* add sr_mod/sg/st
	* remove sudo in Makefile

2011-05-16:
	* add config for a web-integrated firmware (6M)

2011-05-15:
	* add openldap-utils in repository
	* enable CONFIG_EPOLL
	* enable CONFIG_TMPFS_POSIX_ACL (tmpfs permissions?)
	* enable CONFIG_SHMEM, disable CONFIG_TINY_SHMEM (tmpfs in df?)
	* enable CONFIG_FUTEX

2011-05-11:
	* fix /tmp permission bits to 1777 in rootfs (not realy work yet)

2011-04-27:
	* add rtnetlink/macvlan, prepare to port
	* add new FAQ entry

2011-04-26:
	* add ip

2011-04-25:
	* add backfire config for rootfs and repository respectively

2011-04-23:
	* add block-hotplug

2011-04-21:
	* mv /etc/kernel.conf to /etc/config/kernel, 