@@ -1,3 +1,4 @@
+/DSL-2760U
 /rootfs*
 /vmlinux*
 /modules
