@@ -1,0 +1,44 @@
+#!/bin/sh
+
+installd() {
+    local DESTDIR=$BCMROOT/$1
+    if [ ! -e $DESTDIR ]; then
+        echo "Creating directory: $DESTDIR"
+        mkdir -p $DESTDIR
+        return
+    fi
+    if [ ! -d $DESTDIR ]; then
+        echo error: $DESTDIR exists, but not a directory.
+        exit 1
+    fi
+}
+
+installf() {
+    local DESTFILE=$BCMROOT/$1
+    if [ -e $DESTFILE ]; then
+        rm -f $DESTFILE
+    fi
+    ln -s `realpath $1` $DESTFILE
+}
+
+
+if [ ! -e DSL-2760U/README ]; then
+    echo "Create the DSL-2760U symbolic link first."
+    exit 1
+fi
+
+BCMROOT=`realpath DSL-2760U`
+
+cd src/files
+
+find * | while read LINE 
+do
+    if [ -d "$LINE" ]; then
+        installd $LINE
+    else
+        echo "Overwriting $LINE"
+        installf $LINE
+    fi
+done
+
+echo Done.
