@@ -1,5 +1,11 @@
+2011-11-22:
+	* add ext2 for flash drives
+
 2011-11-16:
 	* add usb-serial, usb-serial-option to support 3g adaptors
+
+2011-11-11
+	* enable CONFIG_INOTIFY
 
 2011-11-04:
 	* btn_hotplug works
